# claude-code-marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md  cpm-onboarding-presentation.html  cpm-presentation.html  cpm-training-guide.html  recent-changes-summary.md
.claude/: ralph-loop.local.md  settings.local.json
.claude-plugin/: marketplace.json
.tasks/: tasks.json  view-state.json
cpm/: README.md
cpm/.claude-plugin/: plugin.json
cpm/agents/: roster.yaml
cpm/hooks/: hooks.json  post-compact.sh  pre-compact.sh  session-start-compact.sh  session-start.sh
cpm/shared/: skill-conventions.md  status-model.md
cpm/tools/board/: README.md  board.py  board_view.py  cache.py  embedded_terminal.py  launcher.py  pyproject.toml  registry.py  status_model.py
cpm/tools/board/tests/: conftest.py  test_add_project.py  test_attach.py  test_board_scaffold.py  test_board_view.py  test_cache.py  test_clear_cache.py  test_command_palette.py  test_cursor.py  test_degradation.py  test_derivation.py  test_drilldown.py  test_embedded_launch.py  test_embedded_terminal.py  test_fixture_factory.py  test_launch_actions.py  test_launcher.py  test_next_actions.py  test_pills.py  test_ralph.py  test_refresh_cli.py  test_registry.py  test_remove_project.py  test_rollup.py  test_tmux_launch.py  test_watch.py
cpm2/: .orphaned_at  README.md
cpm2/.claude-plugin/: plugin.json
cpm2/agents/: roster.yaml
cpm2/hooks/: session-start.sh
docs/plans/: .cpm-progress.md  (+11 more)
filament-mockup/: SKILL.md
js-simplifier/: SKILL.md
noteplan/: SKILL.md
php-lsp/: README.md
sdd/: CHANGELOG.md  README.md
(+362 files in other folders)
